[gd_scene load_steps=14 format=3 uid="uid://dsduhwe8hqs8a"]

[ext_resource type="Theme" path="res://Art/UI/MainMenuButtonTheme.tres" id="1_4adf5"]
[ext_resource type="Script" path="res://UI/Menus/Server Connecting/scripts/server_select.gd" id="3_8ntu5"]
[ext_resource type="PackedScene" uid="uid://t43uc074fdn3" path="res://UI/Menus/Server Connecting/server.tscn" id="4_qg8mg"]
[ext_resource type="Theme" uid="uid://jrlselt3bfqh" path="res://Art/UI/StandardButton.tres" id="4_vfclq"]
[ext_resource type="Script" path="res://UI/Menus/Server Connecting/scripts/server_browser.gd" id="5_sbtl2"]
[ext_resource type="FontFile" uid="uid://hisxnsk1olxb" path="res://Art/Fonts/m3x6.ttf" id="5_tu8p8"]
[ext_resource type="PackedScene" uid="uid://1mvptt5tr4c4" path="res://UI/Menus/Server Connecting/server_info.tscn" id="6_vl0g5"]
[ext_resource type="PackedScene" uid="uid://c63wng7gvpv7e" path="res://UI/Menus/Server Connecting/waiting_room.tscn" id="8_lcksl"]
[ext_resource type="PackedScene" uid="uid://r4itwr37og2b" path="res://UI/Menus/Server Connecting/direct_ip_join.tscn" id="9_ssqht"]
[ext_resource type="AudioStream" uid="uid://cnrl5pjsjlyno" path="res://Sounds/Music/menu-music-1.wav" id="10_2tkvh"]

[sub_resource type="Theme" id="Theme_vh3fo"]
default_font = ExtResource("5_tu8p8")

[sub_resource type="Theme" id="Theme_36kwc"]
default_font = ExtResource("5_tu8p8")
default_font_size = 64

[sub_resource type="Theme" id="Theme_5my6h"]
default_font = ExtResource("5_tu8p8")
default_font_size = 32

[node name="Lobby" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4adf5")
script = ExtResource("3_8ntu5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_scale = 19.232

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.27451, 0.627451, 1)

[node name="Server" parent="CanvasLayer" instance=ExtResource("4_qg8mg")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
grow_horizontal = 0
grow_vertical = 1

[node name="HostGame" parent="CanvasLayer/Server" index="0"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 64.0
grow_horizontal = 0
theme = ExtResource("4_vfclq")
theme_override_font_sizes/font_size = 48

[node name="BackBtn" type="Button" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 112.0
offset_bottom = 64.0
theme = ExtResource("4_vfclq")
text = "Back"

[node name="IPBtn" type="Button" parent="CanvasLayer"]
offset_left = 322.0
offset_top = 5.0
offset_right = 478.0
offset_bottom = 64.0
theme = ExtResource("4_vfclq")
theme_override_font_sizes/font_size = 48
text = "Search IP"

[node name="Servers" type="Label" parent="CanvasLayer"]
offset_left = 133.0
offset_top = -12.0
offset_right = 301.0
offset_bottom = 64.0
theme = SubResource("Theme_vh3fo")
theme_override_font_sizes/font_size = 96
text = "Servers"

[node name="ServerBrowser" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -288.0
offset_right = -5.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.971427)
theme = ExtResource("1_4adf5")
script = ExtResource("5_sbtl2")
serverInfo = ExtResource("6_vl0g5")

[node name="BroadcastTimer" type="Timer" parent="CanvasLayer/ServerBrowser"]

[node name="Panel" type="Panel" parent="CanvasLayer/ServerBrowser"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -52.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08868, 1.14568)

[node name="ServerInfoTitle" type="HBoxContainer" parent="CanvasLayer/ServerBrowser/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 123.0
offset_bottom = 51.0
grow_horizontal = 2
scale = Vector2(0.827113, 1.0204)
theme = SubResource("Theme_36kwc")

[node name="NameTitle" type="Label" parent="CanvasLayer/ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server
"
horizontal_alignment = 1

[node name="IPTitle" type="Label" parent="CanvasLayer/ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"
horizontal_alignment = 1

[node name="PlayerCountTitle" type="Label" parent="CanvasLayer/ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Players"
horizontal_alignment = 1

[node name="JoinTitle" type="Label" parent="CanvasLayer/ServerBrowser/Panel/ServerInfoTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ServerBrowser/Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.094
offset_left = 0.918544
offset_top = 40.433
offset_right = -5.08148
offset_bottom = 123.871
grow_horizontal = 2
scale = Vector2(1.01413, 1.00375)

[node name="ListenPortLabel" type="Label" parent="CanvasLayer/ServerBrowser"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -31.4996
offset_right = 235.0
offset_bottom = 19.5004
grow_vertical = 0
scale = Vector2(0.509617, 0.713443)
theme = SubResource("Theme_5my6h")
text = "Listen to port:"

[node name="WaitingRoom" parent="CanvasLayer" instance=ExtResource("8_lcksl")]
visible = false
offset_left = -2.0
offset_right = -2.0

[node name="IPAddress" parent="CanvasLayer/WaitingRoom" index="0"]
offset_left = 210.0
offset_top = -1.0
offset_right = 354.0
offset_bottom = 25.0

[node name="UserIDLabel" parent="CanvasLayer/WaitingRoom" index="1"]
offset_left = 12.0
offset_top = -1.0
offset_right = 156.0
offset_bottom = 25.0

[node name="Panel" parent="CanvasLayer/WaitingRoom" index="2"]
offset_left = 3.0
offset_top = 11.0
offset_right = 718.0
offset_bottom = 379.0

[node name="VBoxContainer" parent="CanvasLayer/WaitingRoom" index="3"]
offset_left = 7.0
offset_top = 185.0
offset_right = 727.0
offset_bottom = 424.0


[node name="DirectIPJoin" parent="CanvasLayer" instance=ExtResource("9_ssqht")]

[node name="CanvasLayer" parent="CanvasLayer/DirectIPJoin" index="0"]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2tkvh")
autoplay = true

[connection signal="pressed" from="CanvasLayer/Server/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="CanvasLayer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/IPBtn" to="." method="_on_ip_btn_pressed"]
[connection signal="timeout" from="CanvasLayer/ServerBrowser/BroadcastTimer" to="CanvasLayer/ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/WaitingRoom/VBoxContainer/GoToGameBtn" to="." method="_on_go_to_game_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/WaitingRoom/VBoxContainer/CancelHostBtn" to="." method="_on_cancel_host_btn_pressed"]

[editable path="CanvasLayer/Server"]
[editable path="CanvasLayer/WaitingRoom"]
[editable path="CanvasLayer/DirectIPJoin"]
